--- a/src/components/content-resources/FolderName.scss
+++ b/src/components/content-resources/FolderName.scss
@@ -3,6 +3,11 @@
 span.folder-name-component {
 	text-align: center;
 	color: $secondary-grey;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	padding-right: 1em;
+
 	i.icon-folder {
 		color: #787878;
 		margin-right: rem-calc(10px);
