--- a/src/components/content-resources/layout/icon-grid/Folder.scss
+++ b/src/components/content-resources/layout/icon-grid/Folder.scss
@@ -9,6 +9,7 @@ body > .folder-asset.ghost,
 	line-height: rem-calc(20px);
 	cursor: pointer;
 	position: relative;
+	overflow: hidden;
 
 	&.unselectable {
 	}
